--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "js-sha256": "^0.9.0",
+    "near-api-js": "^0.44.2",
+    "react": "^16.13.1",
+    "react-crossword-near": "^2.3.1",
+    "react-dom": "^16.13.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3"
   }
 }
