--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bs58": "^5.0.0",
     "js-sha256": "^0.9.0",
     "near-api-js": "^0.44.2",
     "react": "^16.13.1",
     "react-crossword-near": "^2.3.1",
     "react-dom": "^16.13.1",
+    "react-fullpage-custom-loader": "^0.1.6",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
